[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.26.0"
spl-associated-token-account = "=1.1.1"
zeroize="=1.3.0"
octocrab = {version="0.15.4",feature=["tokio"]} # downgraded to meet anchor-client zeroize version
tokio = { version = "1", features = ["full"] }
log = "0.4.17"
regex = "1.7.1"
async-trait = "0.1.61"
env_logger = "0.10.0"
thiserror = "1.0.38"
dotenv = "0.15.0"
jsonwebtoken = "8.2.0"
serde_json = "1.0"
serde = "1.0.152"
reqwest = {version="0.11.13",feature=["json"]}
base64 = "0.21.0"